<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingTop="12dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_appearance_settings"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_color_method"
                android:textColor="?android:textColorPrimary"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/colorMethodSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/customColorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_custom_color"
                android:textColor="?android:textColorPrimary"
                android:textSize="14sp" />

            <soptqs.medianotification.views.ColorImageView
                android:id="@+id/customColor"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="16dp" />

        </LinearLayout>

        <Switch
            android:id="@+id/inverseTextSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_inverse_text"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

        <Switch
            android:id="@+id/highContrastSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_high_contrast_text"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

        <Switch
            android:id="@+id/forceMdIcons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_force_md_icons"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

        <Switch
            android:id="@+id/albumArtSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_album_art"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

        <Switch
            android:id="@+id/lastFmSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_last_fm"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

        <Switch
            android:id="@+id/tencentMusicSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_tencent_music"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

    </LinearLayout>



</androidx.core.widget.NestedScrollView>